main-page with animation

--- a/dev/sass/media/d.sass
+++ b/dev/sass/media/d.sass
@@ -46,6 +46,7 @@ main
 		margin-left: 91px
 	&-title
 		margin-bottom: 53px
+		font-size: 106px
 	&-desc
 		margin-bottom: 99px
 
@@ -83,6 +84,11 @@ main
 					left: 0
 					top: -20px
 					font-family: $mcyrl900
+				&-select
+					.select-option
+						transition: $transition
+						&:hover
+							background-color: $blue
 
 
 .contacts
