--- a/dev/templates/index.pug
+++ b/dev/templates/index.pug
@@ -7,8 +7,8 @@ block content
 		section.banner
 			.section
 				.twd7.d9.banner-inner
-					h1.title.banner-title Invest in real estate
-					p.banner-desc Vulcan Investments is always seeking to acquire new properties and deliver outstanding returns
+					h1.title.banner-title.animation Invest in real estate
+					p.banner-desc.animation Vulcan Investments is always seeking to acquire new properties and deliver outstanding returns
 					.banner-buttons
 						button.button.button-blue INVEST WITH US
 						button.button.button-transparent SELL MY PROPERTY
@@ -16,109 +16,109 @@ block content
 			.section
 				.bricks
 					.m6
-						h2.title.about-title About Vulcan Investments
+						h2.title.about-title.animation About Vulcan Investments
 					.m6.tlwd4.dwd5
 						.about-logo
-							+img('logotype-black.svg')
-							p.about-text Vulcan Investments owns a portfolio of commercial and residential real estate and is actively growing and looking for new investment opportunities.
+							+img('logotype-black.svg').animation
+							p.about-text.animation Vulcan Investments owns a portfolio of commercial and residential real estate and is actively growing and looking for new investment opportunities.
 					.m6.tl6.d7
 						.about-img
 							+img('about-bgc.png')
 					.m6
 						.about-call.bricks
 							.t3.tl4.about-call-link
-								a(href='#')
+								a(href='#').animation
 									+img('phone.svg')
 									span Request a call
-							p.t5.tlwd6.about-text In 2017 Vulcan Investments Real Estate acquired 20 properties, currently valued at over 10 million, in Monmouth & Middlesex counties alone. We are constantly searching the market for additional properties to add to our portfolio, and have a continuous stream of investors driving us to find new ways to deploy capital.
+							p.t5.tlwd6.about-text.animation In 2017 Vulcan Investments Real Estate acquired 20 properties, currently valued at over 10 million, in Monmouth & Middlesex counties alone. We are constantly searching the market for additional properties to add to our portfolio, and have a continuous stream of investors driving us to find new ways to deploy capital.
 		section.info
 			.section
 				.bricks
 					-for (let i = 0; i < 4; i++)
-						.mwd3.info-unit
+						.mwd3.info-unit.animation
 							h6.info-title
 								strong 2.34$
 								span million
 							p.info-desc Investment in 2020
 		section.help.block
 			.section
-				h2.title.help-title helps investors
-				.help-subtitle Cadre helps investors achieve their diversification goals
-				p.help-desc Become a Cadre member in minutes and you'll have exclusive access to our curated commercial real estate investments. In addition, you'll benefit from:
+				h2.title.help-title.animation helps investors
+				.help-subtitle.animation Cadre helps investors achieve their diversification goals
+				p.help-desc.animation Become a Cadre member in minutes and you'll have exclusive access to our curated commercial real estate investments. In addition, you'll benefit from:
 				.help-map
 					.bricks
-						.twd3.tlwd3.help-item
+						.twd3.tlwd3.help-item.animation
 							h6.help-item-title Experienced Fiduciaries
 							p.help-item-text Our investment committee—with an average of 25+ years of investing experience —combined with cutting-edge data scientists, and experienced on-the-ground operators sets our investments apart
 							+img('help-arrow-1.svg')
-						.twd3.tlwd3.help-item
+						.twd3.tlwd3.help-item.animation
 							h6.help-item-title Low Fees
 							p.help-item-text Cadre offers lower fees than what would be charged relative to competing firms’ fees applied to our investments.1 We cut out the "double layer" of promote that other institutions may charge
 							+img('help-arrow-2.svg')
 					.bricks
-						.twd3.tlwd3.help-item
+						.twd3.tlwd3.help-item.animation
 							h6.help-item-title Transparency
 							p.help-item-text Cadre is a radical departure from the industry norm of opacity. We provide granular insights just clicks away - including the investment committee rationale and ongoing quarterly reporting on all of our assets
 							+img('help-arrow-3.svg')
-						.twd3.tlwd3.help-item
+						.twd3.tlwd3.help-item.animation
 							h6.help-item-title Potential for Liquidity
 							p.help-item-text We offer a groundbreaking secondary market, providing investors with the potential to exit eligible assets during our secondary windows. This is in marked contrast to traditional real estate investment funds that lock up your capital for years
 		section.recent.block
 			.section
-				h2.title.recent-title Our Recent Transactions
+				h2.title.recent-title.animation Our Recent Transactions
 				.bricks
 					.t8.tlwd4
 						.bricks.recent-info-cont
 							.twd4.recent-info
-								h6.recent-info-title Recent Transaction
-								p.recent-info-desc Vulcan Investments is always seeking to acquire new properties and deliver outstanding returns. Vulcan Investments is always seeking to acquire new properties and deliver outstanding returns.
-								.recent-info-price 200 000$
+								h6.recent-info-title.animation Recent Transaction
+								p.recent-info-desc.animation Vulcan Investments is always seeking to acquire new properties and deliver outstanding returns. Vulcan Investments is always seeking to acquire new properties and deliver outstanding returns.
+								.recent-info-price.animation 200 000$
 							.twd4.recent-info
-								h6.recent-info-title Recent Transaction
-								p.recent-info-desc Vulcan Investments is always seeking to acquire new properties and deliver outstanding returns.
-								.recent-info-price 200 000$
+								h6.recent-info-title.animation Recent Transaction
+								p.recent-info-desc.animation Vulcan Investments is always seeking to acquire new properties and deliver outstanding returns.
+								.recent-info-price.animation 200 000$
 					.m6.twd4.tlwd3
 						.recent-block
 							.recent-block-inner
-								.recent-block-price 200 000$
-								h6.recent-block-title Recent Transaction
-								p.recent-block-desc Vulcan Investments is always seeking to acquire new properties and deliver outstanding returns.
+								.recent-block-price.animation 200 000$
+								h6.recent-block-title.animation Recent Transaction
+								p.recent-block-desc.animation Vulcan Investments is always seeking to acquire new properties and deliver outstanding returns.
 							.recent-block-img
 								+img('recent-bgc-1.jpg')
 					.m6.twd4.tlwd3
 						.recent-block
 							.recent-block-inner
-								.recent-block-price 200 000$
-								h6.recent-block-title Recent Transaction
-								p.recent-block-desc Vulcan Investments is always seeking to acquire new properties and deliver outstanding returns.
+								.recent-block-price.animation 200 000$
+								h6.recent-block-title.animation Recent Transaction
+								p.recent-block-desc.animation Vulcan Investments is always seeking to acquire new properties and deliver outstanding returns.
 							.recent-block-img
 								+img('recent-bgc-1.jpg')
 		section.cases.block
 			.section
-				h2.title.cases-title Our cases
+				h2.title.cases-title.animation Our cases
 				+img('FirstAidKit.svg').cases-bgc
 				.bricks
 					.m6.tl6
 						.cases-block
-							h4.cases-block-title Real estate is a critical part of a sound investment portfolio
-							p.cases-block-desc A key tenet for building a sound investment portfolio is diversification. That’s where real estate comes in. Due to its low correlation to stocks and bonds, the inclusion of real estate to a multi-asset portfolio is designed to reduce volatility and enhance returns.
+							h4.cases-block-title.animation Real estate is a critical part of a sound investment portfolio
+							p.cases-block-desc.animation A key tenet for building a sound investment portfolio is diversification. That’s where real estate comes in. Due to its low correlation to stocks and bonds, the inclusion of real estate to a multi-asset portfolio is designed to reduce volatility and enhance returns.
 							br
 							br
-							p.cases-block-desc That is why many professional investment managers suggest a portfolio allocation of 10% or more to commercial real estate investments.
+							p.cases-block-desc.animation That is why many professional investment managers suggest a portfolio allocation of 10% or more to commercial real estate investments.
 				.bricks.cases-units
-					.m6.cases-unit
+					.m6.cases-unit.animation
 						.cases-unit-title
 							.cases-unit-title-img
 								+img('cases-icon-1.svg')
 							span Low Stock Market Correlation
 						p.cases-unit-text Real estate performance has low correlation to public markets and is structured to provide a hedge against market volatility
-					.m6.cases-unit
+					.m6.cases-unit.animation
 						.cases-unit-title
 							.cases-unit-title-img
 								+img('cases-icon-2.svg')
 							span Capital Preservation
 						p.cases-unit-text Real estate, when properly leveraged, is a tangible asset intended to preserve capital
-					.m6.cases-unit
+					.m6.cases-unit.animation
 						.cases-unit-title
 							.cases-unit-title-img
 								+img('cases-icon-3.svg')
@@ -126,41 +126,41 @@ block content
 						p.cases-unit-text Real estate is designed to generate stable, predictable cash flow, through booms and busts
 		section.values.block
 			.section
-				h2.title Values
+				h2.title.animation Values
 				.bricks
-					.m6.t2.tlwd3
+					.m6.t2.tlwd3.animation
 						.values-block
 							h5.values-block-title Empathy
 							p.values-block-text The needs and objectives of our investors guide all operations and drive improvements to our technology
 					.values-blue-insert
-					.m6.t2.tlwd3
+					.m6.t2.tlwd3.animation
 						.values-block
 							h5.values-block-title Tenacity
 							p.values-block-text We are here because the status quo is not good enough. We are tirelessly striving to provide better real estate investing and finance through technology
 					.values-blue-insert
-					.m6.t2.tlwd3
+					.m6.t2.tlwd3.animation
 						.values-block
 							h5.values-block-title Transparency
 							p.values-block-text We earn the trust of investors every day through sound reporting and frequent project updates
 		section.vulcan.block
 			.section
-				h2.title Contact Vulcan
+				h2.title.animation Contact Vulcan
 				form(name='contactVulcan').vulcan-form
 					.bricks
 						.m6.twd4.tlwd5.dwd6.form-block
-							span.form-block-title Name
+							span.form-block-title.animation Name
 								span *
 							input(type='text').form-block-input
 						.m6.twd4.tlwd5.dwd6.form-block
-							span.form-block-title E-mail
+							span.form-block-title.animation E-mail
 								span *
 							input(type='text').form-block-input
 						.m6.twd4.tlwd5.dwd6.form-block
-							span.form-block-title Phone Number
+							span.form-block-title.animation Phone Number
 								span *
 							input(type='text').form-block-input
 						.m6.twd4.tlwd5.dwd6.form-block
-							span.form-block-title Cause
+							span.form-block-title.animation Cause
 							input(type='hidden').form-block-select-input
 							.form-block-input.form-block-select.select
 								button(data-click-action='front:selectOpen').select-head
@@ -175,48 +175,48 @@ block content
 									button(data-click-action='front:selectChoose').select-option 5
 									button(data-click-action='front:selectChoose').select-option 6
 						.m6.form-block.form-block-textarea
-							span.form-block-title Message or Property Address
+							span.form-block-title.animation Message or Property Address
 							textarea.form-block-input
 						.m6
 							button.button.button-blue Submit
 		section.ways.block
 			.section
-				h2.title two ways to invest with us
+				h2.title.animation two ways to invest with us
 				.bricks
 					.m6.twd4.tlwd5.dwd6.ways-unit.ways-unit-blue
-						.ways-price $50 000
-						.ways-details *Minimum investment size
-						.ways-subtitle Deal-by-Deal Investing: Select the right investment for you
-						.ways-desc Get direct access to individual institutional-quality commercial real estate assets with greater transparency, lower fees, and a groundbreaking secondary market
+						.ways-price.animation $50 000
+						.ways-details.animation *Minimum investment size
+						.ways-subtitle.animation Deal-by-Deal Investing: Select the right investment for you
+						.ways-desc.animation Get direct access to individual institutional-quality commercial real estate assets with greater transparency, lower fees, and a groundbreaking secondary market
 						button.button.button-transparent Learn more
 					.m6.twd4.tlwd5.dwd6.ways-unit.ways-unit-gray
-						.ways-price $50 000
-						.ways-details *Minimum investment size
-						.ways-subtitle Deal-by-Deal Investing: Select the right investment for you
-						.ways-desc Get direct access to individual institutional-quality commercial real estate assets with greater transparency, lower fees, and a groundbreaking secondary market
+						.ways-price.animation $50 000
+						.ways-details.animation *Minimum investment size
+						.ways-subtitle.animation Deal-by-Deal Investing: Select the right investment for you
+						.ways-desc.animation Get direct access to individual institutional-quality commercial real estate assets with greater transparency, lower fees, and a groundbreaking secondary market
 						button.button.button-blue Learn more
 		section.contacts.block
 			.section
-				h2.title vulcan investments address
+				h2.title.animation vulcan investments address
 				.bricks
 					.m6.twd5.tlwd6.dwd7.contacts-map-cont
 						.contacts-map
 							iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3043.5649951409064!2d-74.30058058443582!3d40.285412371539124!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3d3f7a3d2a35d%3A0x40b1f83007afe202!2zMjAwIENyYWlnIFJkLCBNYW5hbGFwYW4gVG93bnNoaXAsIE5KIDA3NzI2LCDQodCo0JA!5e0!3m2!1sru!2skz!4v1615911286891!5m2!1sru!2skz" allowfullscreen="" loading="lazy")
 					.m6.twd3.tlwd4.dwd5
 						.contacts-info
-							.contacts-info-block
+							.contacts-info-block.animation
 								.contacts-info-icon
 									+img('phone.svg')
 								a(href='tel:7327403896').contacts-info-link
 									span Give Us A Call
 									span (732) 740 - 3896
-							.contacts-info-block
+							.contacts-info-block.animation
 								.contacts-info-icon
 									+img('Chats.svg')
 								a(href='mailto:igor@vulcanent.com').contacts-info-link
 									span Send Us An Email
 									span igor@vulcanent.com
-							.contacts-info-block
+							.contacts-info-block.animation
 								.contacts-info-icon
 									+img('address.svg')
 								.contacts-info-link
