--- a/dev/sass/media/m.sass
+++ b/dev/sass/media/m.sass
@@ -460,3 +460,7 @@ main
 		text-transform: uppercase
 		line-height: 14.4px
 		letter-spacing: .2em
+
+.animation
+	opacity: 0
+	transform: translateX(-25%)
