--- a/dev/templates/index.pug
+++ b/dev/templates/index.pug
@@ -201,7 +201,7 @@ block content
 				.bricks
 					.m6.twd5.tlwd6.dwd7.contacts-map-cont
 						.contacts-map
-							iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3043.5649951409064!2d-74.30058058443582!3d40.285412371539124!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c3d3f7a3d2a35d%3A0x40b1f83007afe202!2zMjAwIENyYWlnIFJkLCBNYW5hbGFwYW4gVG93bnNoaXAsIE5KIDA3NzI2LCDQodCo0JA!5e0!3m2!1sru!2skz!4v1615911286891!5m2!1sru!2skz" allowfullscreen="" loading="lazy")
+							iframe(src="" allowfullscreen="" loading="lazy")
 					.m6.twd3.tlwd4.dwd5
 						.contacts-info
 							.contacts-info-block.animation
