--- a/dev/sass/media/tl.sass
+++ b/dev/sass/media/tl.sass
@@ -5,8 +5,6 @@
 	&-logo
 		&-link
 			max-width: 185px
-	&-nav
-		justify-content: center
 	&-phone
 		display: flex
 		align-items: center
@@ -185,6 +183,19 @@ main
 			span:first-child
 				margin-bottom: 5px
 
+
+.projects
+	&-block
+		height: 361px
+	&-t70
+		height: 741px
+	&-info
+		bottom: 15px
+		&-title
+			font-size: 18px
+		&-desc
+			max-width: 250px
+			font-size: 14px
 
 .foot
 	padding: 100px 0 45px
