--- a/dev/sass/media/t.sass
+++ b/dev/sass/media/t.sass
@@ -8,8 +8,7 @@
 	&-logo
 		justify-content: flex-start
 	&-nav
-		display: flex
-		align-items: center
+		+dfc
 		&-list
 			position: static
 			height: initial
@@ -202,6 +201,28 @@ main
 			span:first-child
 			span:last-child
 
+
+.projects
+	.title
+		margin-bottom: 15px
+	&-subtitle
+		margin-bottom: 40px
+	&-year
+		text-align: left
+		font-family: $mcyrl900
+		font-size: 24px
+		position: absolute
+		left: 0
+		bottom: -5px
+	&-t30
+		width: calc((100% - 38px) / 3)
+		margin-left: auto
+		margin-top: 0
+		&:first-child
+			margin-left: 0
+	&-t70
+		width: calc(((100% - 38px) / 3) * 2 + 19px)
+		height: 419px
 
 .foot
 	.bricks
