ready: complete projects page

--- a/dev/sass/media/t.sass
+++ b/dev/sass/media/t.sass
@@ -134,13 +134,14 @@ main
 
 
 .cases
-	position: relative
+	.section
+		position: relative
 	&-bgc
 		display: block
 		opacity: .05
 		position: absolute
 		right: 0
-		top: 50px
+		top: -30px
 	&-block
 		&-title
 			width: 288px
