ready: complete projects page

--- a/dev/templates/index.pug
+++ b/dev/templates/index.pug
@@ -12,7 +12,7 @@ block content
 					.banner-buttons
 						button.button.button-blue INVEST WITH US
 						button.button.button-transparent SELL MY PROPERTY
-		section.about.block.animation-block
+		section.about.block.animation-block#about
 			.section
 				.bricks
 					.m6
@@ -27,7 +27,7 @@ block content
 					.m6
 						.about-call.bricks
 							.t3.tl4.about-call-link
-								a(href='#').animation
+								a(href='/#call').animation
 									+img('phone.svg')
 									span Request a call
 							p.t5.tlwd6.about-text.animation In 2017 Vulcan Investments Real Estate acquired 20 properties, currently valued at over 10 million, in Monmouth & Middlesex counties alone. We are constantly searching the market for additional properties to add to our portfolio, and have a continuous stream of investors driving us to find new ways to deploy capital.
@@ -142,7 +142,7 @@ block content
 						.values-block
 							h5.values-block-title Transparency
 							p.values-block-text We earn the trust of investors every day through sound reporting and frequent project updates
-		section.vulcan.block.animation-block
+		section.vulcan.block.animation-block#call
 			.section
 				h2.title.animation Contact Vulcan
 				form(name='contactVulcan').vulcan-form
