--- a/dev/templates/parts/contacts.pug
+++ b/dev/templates/parts/contacts.pug
@@ -1,4 +1,4 @@
-section.contacts.block
+section.contacts.block#contacts
 	.section.animation-block
 		h2.title.animation vulcan investments address
 		.bricks
