--- a/dev/templates/projects.pug
+++ b/dev/templates/projects.pug
@@ -10,9 +10,7 @@ block content
 				h6.projects-subtitle.animation View some of our featured real estate transactions
 			.section.animation-block
 				.bricks.projects-block-row
-					.m6.twd1.tl1.dwd1.projects-year.animation
-						span 2018
-					.m6.t7.tlwd9.d11.projects-block
+					.m6.projects-block
 						.projects-info
 							h5.projects-info-title
 								span.animation 20 Court Street
@@ -22,9 +20,7 @@ block content
 							+img('projects-bgc-1.jpg')
 			.section.animation-block
 				.bricks.projects-block-row
-					.m6.twd1.tl1.dwd1.projects-year.animation
-						span 2019
-					.m6.t7.tlwd9.d11.projects-block
+					.m6.projects-block
 						.projects-info
 							h5.projects-info-title
 								span.animation 617 Palmer Ave
@@ -34,9 +30,7 @@ block content
 							+img('projects-bgc-2.jpg')
 			.section.animation-block
 				.bricks.projects-block-row
-					.m6.twd1.tl1.dwd1.projects-year.animation
-						span 2020
-					.m6.t7.tlwd9.d11.projects-block
+					.m6.projects-block
 						.projects-info
 							h5.projects-info-title
 								span.animation 411 RT 34
@@ -46,9 +40,7 @@ block content
 							+img('projects-bgc-3.jpg')
 			.section.animation-block
 				.bricks.projects-block-row
-					.m6.twd1.dwd1.projects-year.animation
-						span 2021
-					.m6.t7.d11
+					.m6
 						.bricks
 							.m6.projects-block.projects-t30
 								.projects-info
