--- a/dev/templates/template/header.pug
+++ b/dev/templates/template/header.pug
@@ -6,14 +6,14 @@ header.head
 					+img('headBurger.svg')
 					+img('close.svg')
 			.m4.t2.tl2.d2.head-logo
-				a(href='#').head-logo-link
+				a(href='/').head-logo-link
 					+img('logotype.svg')
 			.t5.tlwd6.dwd8.head-nav
 				nav.head-nav-list
-					a(href='#').head-nav-link About us
-					a(href='#').head-nav-link Our cases
-					a(href='#').head-nav-link Contacts
+					a(href='/#about').head-nav-link About us
+					a(href='/projects.html').head-nav-link Our cases
+					a(href='#contacts').head-nav-link Contacts
 			.m1.twd1.tl2.d2.head-phone
-				a(href='#').head-phone-link
+				a(href='/#call').head-phone-link
 					include ../../img/phone.svg
 					span Request a call
